{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 65,
  "lineage": "30c8d2a9-9738-f4ae-c644-bbf4d6cabc09",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "eks_management_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-092a6a7bb400003b4",
            "arn": "arn:aws:ec2:ap-south-1:717279725804:instance/i-04572bbe81fe7d0d7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04572bbe81fe7d0d7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "ubuntu",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-067adfe565f4c81f1",
            "private_dns": "ip-10-0-1-117.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.117",
            "public_dns": "ec2-3-110-161-124.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.110.161.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a5fa1c590ed858dc",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f59a07d3fbb115e2",
            "tags": {
              "Name": "my_eks-management-instance"
            },
            "tags_all": {
              "Name": "my_eks-management-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0591d59162744a719"
            ]
          },
          "dependencies": [
            "aws_security_group.eks_manager_instance_sg",
            "aws_subnet.eks_public_subnets",
            "aws_vpc.eks_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:717279725804:internet-gateway/igw-014e4e43e453db949",
            "id": "igw-014e4e43e453db949",
            "owner_id": "717279725804",
            "tags": {
              "Name": "my_eks-igw"
            },
            "tags_all": {
              "Name": "my_eks-igw"
            },
            "vpc_id": "vpc-0a9a184d9c319e826"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:717279725804:route-table/rtb-0395ef4bac1cc6741",
            "id": "rtb-0395ef4bac1cc6741",
            "owner_id": "717279725804",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-014e4e43e453db949",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "yogi_public-rt"
            },
            "tags_all": {
              "Name": "yogi_public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9a184d9c319e826"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac6d6085d630d4da",
            "route_table_id": "rtb-0395ef4bac1cc6741",
            "subnet_id": "subnet-0f59a07d3fbb115e2"
          },
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_route_table.public_rt",
            "aws_subnet.eks_public_subnets",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090a52fc7b680ead8",
            "route_table_id": "rtb-0395ef4bac1cc6741",
            "subnet_id": "subnet-0ae42384872a32941"
          },
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_route_table.public_rt",
            "aws_subnet.eks_public_subnets",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_manager_instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:717279725804:security-group/sg-0591d59162744a719",
            "description": "Allow ssh inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0591d59162744a719",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH and all TCP traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "yogi_ec2_eks_security_group",
            "name_prefix": "",
            "owner_id": "717279725804",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a9a184d9c319e826"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_node_group_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:717279725804:security-group/sg-00dbb53b1e75a0ec5",
            "description": "Security group for EKS Node Group instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00dbb53b1e75a0ec5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow all traffic within the security group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "my_eks-node-group-sg",
            "name_prefix": "",
            "owner_id": "717279725804",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my_eks-node-group-sg"
            },
            "tags_all": {
              "Name": "my_eks-node-group-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9a184d9c319e826"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:717279725804:subnet/subnet-0f59a07d3fbb115e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f59a07d3fbb115e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "717279725804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_eks-public-subnet1"
            },
            "tags_all": {
              "Name": "my_eks-public-subnet1"
            },
            "vpc_id": "vpc-0a9a184d9c319e826"
          },
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:717279725804:subnet/subnet-0ae42384872a32941",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae42384872a32941",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "717279725804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_eks-public-subnet2"
            },
            "tags_all": {
              "Name": "my_eks-public-subnet2"
            },
            "vpc_id": "vpc-0a9a184d9c319e826"
          },
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:717279725804:vpc/vpc-0a9a184d9c319e826",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02d310f02b2c98818",
            "default_route_table_id": "rtb-0ffcfbfdffd2785a3",
            "default_security_group_id": "sg-02db3a0e98766bffa",
            "dhcp_options_id": "dopt-0c987df0c50efc373",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a9a184d9c319e826",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ffcfbfdffd2785a3",
            "owner_id": "717279725804",
            "tags": {
              "Name": "my_eks-vpc"
            },
            "tags_all": {
              "Name": "my_eks-vpc"
            }
          }
        }
      ]
    }
  ]
}